ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: ingress-game-app

spec:
    rules:
        - host: kiyoakiyamamoto.info
          http:
              paths:
                  - path: /
                    pathType: Prefix
                    backend:
                        service:
                            name: service-game-app
                            port:
                                number: 3000
        - host: webapi.kiyoakiyamamoto.info
          http:
              paths:
                  - path: /
                    pathType: Prefix
                    backend:
                        service:
                            name: service-game-app-api
                            port:
                                number: 4000
